Upgrade to Pegdown 1.6.0.